# ai-agents-for-beginners

./: pyproject.toml
01-intro-to-ai-agents/code_samples/: 01-semantic-kernel.ipynb
02-explore-agentic-frameworks/code_samples/: 02-autogen.ipynb  02-azureaiagent.ipynb  02-semantic-kernel.ipynb
03-agentic-design-patterns/code_samples/: 03-semantic-kernel.ipynb
04-tool-use/code_samples/: 04-autogen.ipynb  04-semantic-kernel-python-aiagent-bookinghotel.ipynb  04-semantic-kernel-tool.ipynb
05-agentic-rag/code_samples/: 05-semantic-kernel-azuresearch.ipynb
06-building-trustworthy-agents/code_samples/: 06-system-message-framework.ipynb
07-planning-design/code_samples/: 07-semantic-kernel.ipynb
08-multi-agent/code_samples/: 08-semantic-kernel.ipynb
09-metacognition/code_samples/: 09-semantic-kernel.ipynb
10-ai-agents-production/code_samples/: 10-semantic-kernel.ipynb
11-agentic-protocols/code_samples/semantic-kernel/: 11-a2a.ipynb  11-mcp.ipynb
12-context-engineering/code_samples/: 12-chat_summarization.ipynb
